SF Primes/src/objects/Service_Project_Issues__c.object
<CustomObject>
    <description>This object will be used by the Service Ops Project Teams to list out all issues and risks related to each project. This object will also work in conjunction with the Service Ops projects object.</description>
    <fields>
        <fullName>Ask_of_Sr_Leadership__c</fullName>
        <label>Ask of Sr. Leadership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bug_Owner__c</fullName>
        <inlineHelpText>This individual is responsible for tracking, monitoring and completing work on the assigned bug.</inlineHelpText>
        <label>Bug Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug_Status__c</fullName>
        <label>Bug Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Valid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <description>Bug numbers from Bugzilla (when applicable)</description>
        <label>Bug #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <label>Business Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Eliminate use of mark-up widget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support dealer groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support migration efforts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase operational efficiencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Blocker: Issue must be resolved before launch. 
Category 1: Issue must be resolved within 3 weeks post launch.
Category 2: Issue must be resolved within a quarter. 
Category 3: Issue is an enhancement request.</description>
        <inlineHelpText>Blocker: Issue must be resolved before launch. 
Category 1: Issue must be resolved within 3 weeks post launch.
Category 2: Issue must be resolved within a quarter. 
Category 3: Issue is an enhancement request.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corrective_Actions__c</fullName>
        <description>Steps taken to date to resolve issue or mitigate risk.</description>
        <inlineHelpText>Steps taken to date to resolve issue or mitigate risk.</inlineHelpText>
        <label>Corrective Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box should be checked if an issue is considered a blocker or category 1 and needs to be escalated to senior leadership.</inlineHelpText>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>The impact of the issue on the project.</description>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Teams__c</fullName>
        <label>Impacted Teams</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Strategist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Issue</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Project Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_from_Sr_Leadership__c</fullName>
        <label>Notes from Sr. Leadership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Overall_Project_Status__c</fullName>
        <formula>Service_Ops_Projects__r.Overall_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Service_Ops_Projects__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <formula>TEXT(Service_Ops_Projects__r.Project_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <description>This field is used by the Engagement Manager to identify the priority of this request.</description>
        <inlineHelpText>This field is used by the Engagement Manager to identify the priority of this request.</inlineHelpText>
        <label>Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Project_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>A bug is a technical problem with a current product or solution. An enhancement is a request for new feature or functionality.</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <inlineHelpText>Date bug or enhancement was resolved or closed.</inlineHelpText>
        <label>Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Ops_Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ops Project</label>
        <referenceTo>Service_Ops_Projects__c</referenceTo>
        <relationshipName>Services_Project_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Count__c</fullName>
        <description>The number of tickets/cases logged for this issue/bug as entered by the Engagement Manager.</description>
        <label>Ticket Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Services Project Issue/Risk</label>
    <listViews>
        <fullName>All_Issues_All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Corrective_Actions__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Reported__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Overall_Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Project_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Issues - All Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Issues_Non_Project_Related</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Corrective_Actions__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Reported__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Issues - Non Project Related</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Issues_All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Corrective_Actions__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Reported__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Overall_Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Issues - All Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Issues_All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Corrective_Actions__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Reported__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Overall_Project_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Open Issues - All Open Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPI-{0000}</displayFormat>
        <label>Issue/Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Projects Issues/Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>